test/LitTests/SemanticAnalysis/Constants/InvalidCharacterLiteralSpecifier.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export void varFunction() {
	// CHECK: .loci:6:23: error: invalid character literal specifier 'abc'
	unused auto value0 = 'a' abc;
	
	// CHECK: .loci:9:23: error: invalid character literal specifier 'abc'
	unused auto value1 = abc 'a';
}

// CHECK: 2 errors generated.
